k8s/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: quibly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.6.0
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-storage
          mountPath: /var/lib/kafka/data
      volumes:
      - name: kafka-storage
        persistentVolumeClaim:
          claimName: kafka-pvc

---
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: quibly
spec:
  selector:
    app: kafka
  ports:
  - name: broker
    port: 9092
    targetPort: 9092
  - name: controller
    port: 9093
    targetPort: 9093
  type: ClusterIP
